--- a/Responsive Web Design/survey form/css/style.css
+++ b/Responsive Web Design/survey form/css/style.css
@@ -3,4 +3,10 @@ body{
   justify-content: centre;
   font-family: Arial;
   font-weight: normal;
+  
+  font-weight: normal;
+  
+  font-weight: normal;
+  
+  font-weight: normal;
 }
