--- a/Responsive Web Design/cafe menu/css/style.css
+++ b/Responsive Web Design/cafe menu/css/style.css
@@ -1,1 +1,14 @@
-
+body{
+    background-image: ;
+}
+.menu{
+    width: 80%;
+    padding: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: #deb887 ;
+}
+hr{
+    height: 5px;
+    color: black;
+}
